--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-Pillow==7.2.0
+# pip install -r requirements.txt
+
+numpy
+opencv-python>=4.1.2
+pandas
+Pillow
+pyYAML
+requests
+tqdm
 Shapely==1.7.1
 scikit-image==0.17.2
-numpy==1.18.5
